--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # dependencies
 .history
 __pycache__
@@ -18,3 +17,9 @@ test
 
 
 .DS_Store
+
+# 忽略测试图片
+test/*.jpg
+test/*.png
+# 但保留示例图片
+!demo/*
