--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,57 @@
 # Web Framework
-Flask>=2.0.0
+Flask==3.0.2
+Werkzeug==3.1.3
+blinker==1.9.0
 
 # PyTorch and Vision
-torch>=2.0.0
-torchvision>=0.15.0
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+timm==0.6.7
 
 # Image Processing
-Pillow>=9.0.0
-opencv-python>=4.8.0
-numpy>=1.24.0
+Pillow==11.0.0
+opencv-python==4.10.0.84
+opencv-contrib-python==4.10.0.84
+scikit-image==0.24.0
+imageio==2.36.1
+numpy==1.26.4
+
+# AI Models and Dependencies
+segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
+mediapipe==0.10.20
+controlnet_aux==0.0.7
+transformers==4.47.1
+diffusers==0.32.0
+accelerate==1.2.1
+safetensors==0.4.5
+huggingface-hub==0.27.0
 
 # Cloud Storage
-oss2>=2.18.0
+oss2==2.19.1
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
+crcmod==1.7
+pycryptodome==3.21.0
 
-# HTTP Client
-requests>=2.31.0
+# HTTP and Networking
+requests==2.31.0
+urllib3==2.3.0
+idna==3.10
+certifi==2024.12.14
 
-# Segment Anything Model Dependencies
-matplotlib>=3.7.0
-scipy>=1.10.0
+# Data Processing and Utilities
+scipy==1.13.1
+matplotlib==3.9.4
+networkx==3.2.1
+tqdm==4.67.1
+PyYAML==6.0.2
+packaging==24.2
+filelock==3.16.1
+regex==2024.11.6
+fsspec==2024.12.0
 
 # Development Tools
-python-dotenv>=1.0.0  # 环境变量管理 
+python-dateutil==2.9.0.post0
+typing_extensions==4.12.2
+six==1.17.0
